# sootlib

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  TODO
example/cantera/: CMakeLists.txt  cantera_example_1.cc  cantera_example_1.cpp  cantera_example_2.cc  cantera_example_2.cpp
example/standard/: CMakeLists.txt  advanced_example.cpp  advanced_moment_example.cpp  generator_example.cc  generator_example.cpp  main.cpp  simple_bin_example.cpp  simple_example.cc  simple_example.cpp  simple_moment_example.cpp  standard_example_1.cpp  standard_example_2.cpp
examples/: .gitignore  CMakeLists.txt  advanced_example.cc  generator_example.cc  main.cc  simple_example.cc
examples/burner_flame/: .gitignore  burner_flame.cc  burner_profiles.inp  interp_linear.h  plot.py
examples/fortran_examples/: CMakeLists.txt  simple_example_fort.f90  simple_example_fort.x
examples/fortran_examples/burner_flame/: burner_flame.f90
source/: CMakeLists.txt  soot.cc  soot.h  soot_LOGN.cc  soot_MOMIC.cc  soot_MOMIC.h  soot_MONO.cc
src/: CMakeLists.txt  binomial.h  constants.h  soot.cc  soot.h  sootDefs.h  sootHeaders.h  sootModel.cc  sootModel.h  sootModel_LOGN.cc  sootModel_LOGN.h  sootModel_MOMIC.cc  sootModel_MOMIC.h  sootModel_MONO.cc  sootModel_MONO.h  sootModel_QMOM.cc  sootModel_QMOM.h  sootModel_SECT.cc  sootModel_SECT.h  soot_LOGN.cc  soot_LOGN.h  soot_MONO.h  soot_QMOM.cc  soot_QMOM.h  soot_SECT.cc  soot_SECT.h  sootlibConfig.cmake  state.cc  state.h
src/coagulationModels/: CMakeLists.txt  coagulationModel.h  coagulationModel_CONTINUUM.cc  coagulationModel_CONTINUUM.h  coagulationModel_FM.cc  coagulationModel_FM.h  coagulationModel_FUCHS.cc  coagulationModel_FUCHS.h  coagulationModel_HM.cc  coagulationModel_HM.h  coagulationModel_NONE.h
src/fortran_wraps/: CMakeLists.txt  c_interface.cc  soot_module.f90  sootlib_fortranConfig.cmake
src/growthModels/: CMakeLists.txt  growthModel.cc  growthModel.h  growthModel_FAIR.cc  growthModel_FAIR.h  growthModel_HACA.cc  growthModel_HACA.h  growthModel_LIN.cc  growthModel_LIN.h  growthModel_LL.cc  growthModel_LL.h  growthModel_MB.cc  growthModel_MB.h  growthModel_NONE.h
src/lib/binomial/: binomial.h
src/lib/eispack/: eispack.h
src/lib/jutil/: jutil.h
src/nucleationModels/: CMakeLists.txt  nucleationModel.cc  nucleationModel.h  nucleationModel_AJ_RED.cc  nucleationModel_AJ_RED.h  nucleationModel_BROWN.cc  nucleationModel_BROWN.h  nucleationModel_FAIR.cc  nucleationModel_FAIR.h  nucleationModel_LIN.cc  nucleationModel_LIN.h  nucleationModel_LINA1.cc  nucleationModel_LINA1.h  nucleationModel_LL.cc  nucleationModel_LL.h  nucleationModel_MB.cc  nucleationModel_MB.h  nucleationModel_NONE.h  nucleationModel_PAH.cc  nucleationModel_PAH.h
src/oxidationModels/: CMakeLists.txt  oxidationModel.cc  oxidationModel.h  oxidationModel_AJ_RED.cc  oxidationModel_AJ_RED.h  oxidationModel_BROWN.cc  oxidationModel_BROWN.h  oxidationModel_FAIR.cc  oxidationModel_FAIR.h  oxidationModel_HACA.cc  oxidationModel_HACA.h  oxidationModel_LEE_NEOH.cc  oxidationModel_LEE_NEOH.h  oxidationModel_LL.cc  oxidationModel_LL.h  oxidationModel_MB.cc  oxidationModel_MB.h  oxidationModel_NONE.h  oxidationModel_NSC_NEOH.cc  oxidationModel_NSC_NEOH.h  oxidationModel_OPTG.cc  oxidationModel_OPTG.h  oxidationModel_OPTJ.cc  oxidationModel_OPTJ.h
src/sootModels/: modelGenerator.cc  modelGenerator.h
src/sootModels/coagulationModels/: coagulationModel.h  coagulationModel_CONTINUUM.cc  coagulationModel_CONTINUUM.h  coagulationModel_FM.cc
src/sootModels/growthModels/: growthModel.cc  growthModel.h  growthModel_HACA.cc  growthModel_HACA.h  growthModel_LIN.cc  growthModel_LL.h
src/sootModels/nucleationModels/: nucleationModel.cc  nucleationModel.h  nucleationModel_LL.h  nucleationModel_PAH.h
src/sootModels/oxidationModels/: CMakeLists.txt  oxidationModel.cc  oxidationModel.h  oxidationModel_LEE_NEOH.h  oxidationModel_LL.cc  oxidationModel_NSC_NEOH.cc  oxidationModel_NSC_NEOH.h
src/sootModels/psdModels/: CMakeLists.txt  PSDModel_LOGN.h  PSDModel_MOMIC.cc  PSDModel_QMOM.h  psdModel.cc  psdModel.h  psdModel_LOGN.cc  psdModel_LOGN.h  psdModel_MOMIC.cc  psdModel_MOMIC.h  psdModel_MONO.cc  psdModel_MONO.h  psdModel_QMOM.cc  psdModel_QMOM.h  psdModel_SECT.cc  psdModel_SECT.h
src/sootlib/: BinSootModel.h  BinSootModelFactory.cpp  BinSootModelFactory.h  BinSootModelGenerator.h  CMakeLists.txt  MassRateRatio.h  MassRateRatios.h  MomentSootModel.h  MomentSootModelFactory.cpp  MomentSootModelFactory.h  MomentSootModelGenerator.h  SootModel.h  SootModelFactory.cpp  SootModelFactory.h  SootModel_Base.cpp  SootModel_Base.h  SootModel_MOMIC.cpp  SootModel_MOMIC.h  SootModel_MONO.cpp  SootModel_MONO.h  SootModel_QMOM.cpp  SootModel_QMOM.h  SootModel_SECT.cpp  SootSourceTerms.h  SourceTerms.h  constants.h  static.h
src/sootlib/cantera_compat/: cantera_compat.cpp  cantera_compat.h
src/sootlib/coagulation_model/: CoagulationModel.h  CoagulationModel_FRENK.cc  CoagulationModel_FRENK.cpp  CoagulationModel_FRENK.h  CoagulationModel_FUCHS.cpp  CoagulationModel_FUCHS.h  CoagulationModel_LL.cc  CoagulationModel_LL.cpp  CoagulationModel_LL.h  CoagulationModel_MOMIC.cc  CoagulationModel_MOMIC.cpp  (+4 more)
src/tarModels/: CMakeLists.txt  tarModel.h  tarModel_AJ_RED.cc  tarModel_AJ_RED.h  tarModel_BROWN.cc  tarModel_BROWN.h  tarModel_NONE.h
test/: CMakeLists.txt  GRI.xml  Makefile  main.cpp  status.xlsx  testing-how-to.md  testing-how-to.txt
test/cantera/: CMakeLists.txt
test/standard/: CMakeLists.txt  CoagulationModel_NONE.cpp  GasState.cpp  GrowthModel_NONE.cc  GrowthModel_NONE.cpp  NucleationModel_NONE.cpp  OxidationModel_NONE.cc  OxidationModel_NONE.cpp  standard_test_1.cpp
test/tests/: CMakeLists.txt  CoagulationModel_NONE.cc  GrowthModel_NONE.cc  NucleationModel_NONE.cc  OxidationModel_NONE.cc  OxidationModel_NSC_NEOH.cc  momic_debug.cc  pytest.cc  test1.cc
test/testtools/: TestTools.h
tests/: CMakeLists.txt  coagulationModelTests.cc  constantsTests.cc  growthModelTests.cc  nucleationModelTests.cc  oxidationModelTests.cc  psdModelTests.cc  sootModelTests.cc  stateTests.cc
(+267 files in other folders)
